Fixup no wrap issue

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -417,6 +417,7 @@ h5 {
     padding: 10px 15px;
     cursor: pointer;
     background-color: #0470eb;
+    white-space: nowrap;
     color: #ffffff;
     box-shadow: 3px 3px 6px rgba(variables.$darkcolor, 0.1);
 
